cluster/homelab/apps/remove-bg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remove-bg
  labels:
    name: remove-bg
