cluster/homelab/apps/remove-bg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remove-bg
  namespace: remove-bg
spec:
  type: LoadBalancer
  loadBalancerIP: 10.28.10.11
  selector:
    app: remove-bg
  ports:
  - name: http
    targetPort: 5100
    port: 5100
