cluster/homelab/apps/remove-bg/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: remove-bg
  namespace: remove-bg
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`removebg.oplabs.us`)
      kind: Rule
      services:
        - name: remove-bg
          port: 5100
      middlewares:
        - name: local-ip-list
          namespace: traefik

  tls:
    secretName: oplabs-us-tls
